--- a/src/attendance/automation/gui/view/studentScreen.fxml
+++ b/src/attendance/automation/gui/view/studentScreen.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane
     xmlns="http://javafx.com/javafx/8.0.111"
-    xmlns:fx="http://javafx.com/fxml/1">
+    xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.StudentScreenController">
 
     <children>
         <VBox alignment="CENTER" layoutX="20.0" layoutY="20.0" spacing="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
