--- a/src/attendance/automation/gui/view/StudentScreen.fxml
+++ b/src/attendance/automation/gui/view/StudentScreen.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="700.0" prefWidth="400.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.StudentScreenController">
+<AnchorPane prefHeight="700.0" prefWidth="400.0" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.StudentScreenController">
 
     <children>
         <VBox alignment="CENTER" spacing="40.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -36,14 +36,14 @@
                                 <Font size="18.0" />
                             </font>
                         </Label>
-                        <Label maxHeight="210.0" text="Present">
+                        <Label fx:id="lblAttendance" maxHeight="210.0" text="Absent">
                             <font>
                                 <Font size="18.0" />
                             </font>
                         </Label>
                         <HBox alignment="CENTER" spacing="20.0">
                             <children>
-                                <Button id="present" mnemonicParsing="false" text="Present">
+                                <Button id="present" fx:id="btnRegisterPresent" mnemonicParsing="false" onAction="#handleRegisterPresent" text="Present">
                                     <font>
                                         <Font size="18.0" />
                                     </font>
