--- a/src/attendance/automation/gui/view/TeacherScreen.fxml
+++ b/src/attendance/automation/gui/view/TeacherScreen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -9,18 +10,13 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherScreenController">
+<BorderPane stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherScreenController">
    <left>
-      <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Classes" />
-            <ListView />
-            <HBox alignment="CENTER" spacing="20.0">
-               <children>
-                  <Button mnemonicParsing="false" text="View Class Statistics" />
-               </children>
-            </HBox>
+            <ListView fx:id="lstClasses" prefHeight="300.0" prefWidth="200.0" />
+            <PieChart fx:id="chrtClasses" prefHeight="160.0" prefWidth="250.0" title="Overall Attendance in class" />
          </children>
       </VBox>
    </left>
@@ -28,19 +24,19 @@
       <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
    </padding>
    <right>
-      <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+      <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
             <Label text="Students" />
-            <ListView />
-            <HBox alignment="CENTER" spacing="20.0">
-               <children>
-                  <Button mnemonicParsing="false" text="View Student Statistics" />
-               </children>
-            </HBox>
+            <ListView fx:id="lstStudents" prefHeight="300.0" prefWidth="200.0" />
+            <PieChart fx:id="chrtStudents" prefHeight="160.0" prefWidth="250.0" title="Student's Overall Attendance" />
+            <HBox alignment="CENTER" spacing="20.0" />
          </children>
       </VBox>
    </right>
    <center>
       <AnchorPane prefWidth="20.0" BorderPane.alignment="CENTER" />
    </center>
+   <bottom>
+      <Button mnemonicParsing="false" text="View Student Statistics" BorderPane.alignment="CENTER" />
+   </bottom>
 </BorderPane>
