--- a/src/attendance/automation/css/style.css
+++ b/src/attendance/automation/css/style.css
@@ -7,7 +7,11 @@
 }
 
 .chart-legend {
-    -fx-text-fill: #000;
+    -fx-background-color:  #404040;
+}
+
+.chart-pie-label {
+    -fx-fill: #f2f2f2;
 }
 
 .label {
