Changed CSS for the Teacher's View

--- a/src/attendance/automation/css/style.css
+++ b/src/attendance/automation/css/style.css
@@ -31,7 +31,8 @@
 #schoolstart,
 #today,
 #present,
-#login {
+#login,
+#student-statistics {
     -fx-background-color: #005ce6;
     -fx-text-fill: #eee;
 }
