--- a/src/attendance/automation/gui/view/TeacherStudentView.fxml
+++ b/src/attendance/automation/gui/view/TeacherStudentView.fxml
@@ -9,13 +9,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherStudentViewController">
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
    <children>
-      <VBox alignment="CENTER" prefHeight="149.0" prefWidth="242.0" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Button id="backbutton" fx:id="btnBackButton" mnemonicParsing="false" onAction="#handleBackButton" text="&lt;-" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
+      <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <VBox alignment="CENTER" spacing="10.0">
                <children>
@@ -55,14 +54,22 @@
                   <Label text="[Present | Absent | Mixed]" />
                </children>
             </VBox>
-            <HBox alignment="CENTER" spacing="10.0">
+            <HBox alignment="CENTER" fillHeight="false" spacing="10.0">
                <children>
-                  <Button id="present" mnemonicParsing="false" text="Set Present" />
-                  <Button id="absent" mnemonicParsing="false" text="Set Absence" />
+                  <Button id="present" mnemonicParsing="false" text="Set Present">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Button>
+                  <Button id="absent" mnemonicParsing="false" text="Set Absence">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Button>
                </children>
             </HBox>
          </children>
       </VBox>
-      <Button id="backbutton" fx:id="btnBackButton" mnemonicParsing="false" onAction="#handleBackButton" text="&lt;-" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </AnchorPane>
