--- a/src/attendance/automation/gui/view/LoginScreen.fxml
+++ b/src/attendance/automation/gui/view/LoginScreen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -10,35 +11,47 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane id="AnchorPane" fx:id="root" styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.LoginScreenController">
-   <children>
-      <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <VBox alignment="CENTER">
-               <children>
-                  <Label text="Uni-Login">
-                     <font>
-                        <Font size="18.0" />
-                     </font></Label>
-                  <TextField fx:id="txtUserName" />
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0">
-               <children>
-                  <Label text="Password">
-                     <font>
-                        <Font size="18.0" />
-                     </font></Label>
-                  <PasswordField fx:id="txtPassword" />
-               </children>
-            </VBox>
-            <Button id="login" fx:id="btnLogin" mnemonicParsing="false" onAction="#handleLogin" text="Sign In">
-               <font>
-                  <Font size="18.0" />
-               </font></Button>
-         </children>
-      </VBox>
-   </children>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
+    <children>
+        <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <children>
+                <VBox alignment="CENTER">
+                    <children>
+                        <Label text="Uni-Login">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Label>
+                        <TextField fx:id="txtUserName" />
+                    </children>
+                </VBox>
+                <VBox alignment="CENTER" layoutX="10.0" layoutY="10.0">
+                    <children>
+                        <Label text="Password">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Label>
+                        <PasswordField fx:id="txtPassword" />
+                    </children>
+                </VBox>
+                <ButtonBar buttonOrder="L_R" prefHeight="40.0" prefWidth="200.0">
+                    <buttons>
+                        <Button fx:id="btnLogin" mnemonicParsing="false" onAction="#handleLogin" styleClass="sign" text="Sign In" ButtonBar.buttonData="LEFT">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Button>
+                        <Button fx:id="btnSignup" mnemonicParsing="false" onAction="#handleSignUp" styleClass="sign" text="Sign Up" ButtonBar.buttonData="RIGHT">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Button>
+                    </buttons>
+                </ButtonBar>
+            </children>
+        </VBox>
+    </children>
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
 </AnchorPane>
