show confirmation/error of sent email with new password

--- a/src/attendance/automation/gui/view/ForgotPassword.fxml
+++ b/src/attendance/automation/gui/view/ForgotPassword.fxml
@@ -19,6 +19,7 @@
                <children>
                   <Label text="Enter your email:" />
                   <TextField fx:id="txtFieldEmail" promptText="Enter your email address " />
+                  <Label fx:id="lblEmailStatus" prefHeight="62.0" prefWidth="230.0" wrapText="true" />
                </children>
             </VBox>
             <Button mnemonicParsing="false" onAction="#handleSendNewPassword" prefHeight="26.0" prefWidth="204.0" text="Send me a new password" />
