--- a/src/attendance/automation/css/style.css
+++ b/src/attendance/automation/css/style.css
@@ -106,4 +106,11 @@
 .radio-button {
   -fx-text-fill: #fefefe; }
 
+#messageLbl
+{
+    padding-top:10px;
+    -fx-font-size:12px;
+    -fx-text-fill:darkred;
+}
+
 /*# sourceMappingURL=style.css.map */
