--- a/src/attendance/automation/gui/view/StudentScreen.fxml
+++ b/src/attendance/automation/gui/view/StudentScreen.fxml
@@ -51,6 +51,7 @@
                         </HBox>
                     </children>
                 </VBox>
+            <Button fx:id="btnChangePassword" mnemonicParsing="false" onAction="#handleChangePassword" text="Change Password" />
             </children>
         </VBox>
       <Button fx:id="btnLogout" layoutX="-12.0" layoutY="2.0" mnemonicParsing="false" onAction="#handleLogOut" styleClass="logout" text="Logout" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
