--- a/src/attendance/automation/gui/view/TeacherScreen.fxml
+++ b/src/attendance/automation/gui/view/TeacherScreen.fxml
@@ -13,45 +13,46 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.TeacherScreenController">
-   <left>
-      <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Classes" />
-            <ListView fx:id="lstClasses" prefHeight="300.0" prefWidth="200.0" />
-            <PieChart fx:id="chrtClasses" prefHeight="160.0" prefWidth="250.0" title="Overall Attendance in class" />
-         </children>
-      </VBox>
-   </left>
-   <padding>
-      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-   </padding>
-   <right>
-      <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
-         <children>
-            <Label text="Students" />
-            <ListView fx:id="lstStudents" prefHeight="300.0" prefWidth="200.0" />
-            <PieChart fx:id="chrtStudents" prefHeight="160.0" prefWidth="250.0" title="Student's Overall Attendance" />
-            <HBox alignment="CENTER" spacing="20.0" />
-         </children>
-      </VBox>
-   </right>
-   <center>
-      <AnchorPane prefWidth="20.0" BorderPane.alignment="CENTER" />
-   </center>
-   <bottom>
-      <AnchorPane BorderPane.alignment="CENTER">
-         <children>
-            <ButtonBar AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-               <buttons>
-                  <Button id="student-statistics" fx:id="btnStudentStatistics" mnemonicParsing="false" onAction="#handleStudentStatictics" text="Edit Student Statistics">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </Button>
-               </buttons>
-            </ButtonBar>
-            <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#handleLogOut" styleClass="logout" text="Logout" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" />
-         </children>
-      </AnchorPane>
-   </bottom>
+    <left>
+        <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="Classes" />
+                <ListView fx:id="lstClasses" prefHeight="300.0" prefWidth="200.0" />
+                <PieChart fx:id="chrtClasses" prefHeight="160.0" prefWidth="250.0" title="Overall Attendance in class" />
+            </children>
+        </VBox>
+    </left>
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
+    <right>
+        <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+            <children>
+                <Label text="Students" />
+                <ListView fx:id="lstStudents" prefHeight="300.0" prefWidth="200.0" />
+                <PieChart fx:id="chrtStudents" prefHeight="160.0" prefWidth="250.0" title="Student's Overall Attendance" />
+                <HBox alignment="CENTER" spacing="20.0" />
+            </children>
+        </VBox>
+    </right>
+    <center>
+        <AnchorPane prefWidth="20.0" BorderPane.alignment="CENTER" />
+    </center>
+    <bottom>
+        <AnchorPane BorderPane.alignment="CENTER">
+            <children>
+                <ButtonBar buttonOrder="L_U_R" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                    <buttons>
+                        <Button id="student-statistics" fx:id="btnStudentStatistics" mnemonicParsing="false" onAction="#handleStudentStatictics" text="Edit Student Statistics" ButtonBar.buttonData="RIGHT">
+                            <font>
+                                <Font size="18.0" />
+                            </font>
+                        </Button>
+                        <Button fx:id="btnLogout" mnemonicParsing="false" onAction="#handleLogOut" styleClass="logout" text="Logout" ButtonBar.buttonData="LEFT" />
+                        <Button fx:id="btnChangePassword" mnemonicParsing="false" onAction="#handleChangePassword" text="Change Password" ButtonBar.buttonData="OTHER" />
+                    </buttons>
+                </ButtonBar>
+            </children>
+        </AnchorPane>
+    </bottom>
 </BorderPane>
