--- a/src/attendance/automation/gui/view/TeacherScreen.fxml
+++ b/src/attendance/automation/gui/view/TeacherScreen.fxml
@@ -6,6 +6,8 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -29,7 +31,13 @@
         <VBox alignment="TOP_CENTER" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
                 <Label text="Students" />
-                <ListView fx:id="lstStudents" prefHeight="300.0" prefWidth="200.0" />
+            <TableView fx:id="tblStudents" prefHeight="300.0">
+              <columns>
+                <TableColumn fx:id="clmFName" prefWidth="75.0" text="First Name" />
+                  <TableColumn fx:id="clmLName" prefWidth="75.0" text="Last Name" />
+                <TableColumn fx:id="clmAtt" prefWidth="75.0" text="Attendance" />
+              </columns>
+            </TableView>
                 <PieChart fx:id="chrtStudents" prefHeight="160.0" prefWidth="250.0" title="Student's Overall Attendance" />
                 <HBox alignment="CENTER" spacing="20.0" />
             </children>
