--- a/src/attendance/automation/css/style.css
+++ b/src/attendance/automation/css/style.css
@@ -113,4 +113,16 @@
     -fx-text-fill:darkred;
 }
 
+#requestChange
+{
+    -fx-text-fill:white;
+    -fx-background-color: #005ce6;
+}
+
+#requestChange:pressed 
+{
+  -fx-background-color: #004d39; 
+}
+
+
 /*# sourceMappingURL=style.css.map */
