--- a/src/attendance/automation/gui/view/StudentStatisticWindow.fxml
+++ b/src/attendance/automation/gui/view/StudentStatisticWindow.fxml
@@ -18,15 +18,14 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="anchorPane" styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.StudentStatisticWindowController">
+<AnchorPane fx:id="anchorPane" styleClass="background" stylesheets="@../../css/style.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="attendance.automation.gui.controller.StudentStatisticWindowController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
     <children>
         <VBox alignment="CENTER" layoutX="20.0" layoutY="20.0" spacing="30.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <HBox alignment="CENTER">
+                <HBox alignment="TOP_RIGHT">
                     <children>
                         <VBox alignment="CENTER" spacing="10.0">
                             <children>
@@ -64,6 +63,11 @@
                                 </GridPane>
                             </children>
                         </VBox>
+                  <VBox alignment="TOP_RIGHT" prefHeight="102.0" prefWidth="264.0">
+                     <children>
+                        <Button fx:id="requestChange" mnemonicParsing="false" onAction="#btnRequestChange" text="Request Change Of Attendance" />
+                     </children>
+                  </VBox>
                     </children>
                 </HBox>
                 <HBox alignment="CENTER" spacing="20.0">
