Tableview Header css

--- a/src/attendance/automation/css/style.css
+++ b/src/attendance/automation/css/style.css
@@ -113,4 +113,6 @@
     -fx-text-fill:darkred;
 }
 
+.table-view .column-header .label { -fx-text-fill: black; }
+
 /*# sourceMappingURL=style.css.map */
